# rplcs-events-tournament-1

./: .gitignore  Cargo.toml  LICENSE  README.md  build_submission_podman_images.py  queries.sql  report_generator.py
src/: container.rs  db.rs  game.rs  game_map.rs  main.rs  port_utils.rs  submission.rs  wasm_instance_wrapper.rs
src/game_map/: tests.rs
submissions/example_submission_1/: Cargo.toml  Dockerfile
submissions/example_submission_2/: Cargo.toml  Dockerfile
submissions/example_submission_3/: Cargo.toml  Dockerfile
submissions/example_submission_3/src/: main.rs
submissions/example_submission_4/: Cargo.toml  Dockerfile
submissions/example_submission_4/src/: main.rs
